--- a/components/header.html
+++ b/components/header.html
@@ -13,6 +13,7 @@
       <div class="dropdown">
         <button class="dropbtn" aria-haspopup="true" aria-controls="aproposMenu" aria-expanded="false">À propos ▼</button>
         <div class="dropdown-content" id="aproposMenu">
+          <a href="a-propos.html">Vue d'ensemble</a>
           <a href="concept.html">Concept</a>
           <a href="methodologie.html">Méthodologie</a>
           <a href="enjeux.html">Enjeux</a>
