--- a/components/header.html
+++ b/components/header.html
@@ -24,6 +24,7 @@
         <button class="dropbtn" aria-haspopup="true" aria-controls="academieMenu" aria-expanded="false">Académie ▼</button>
         <div class="dropdown-content" id="academieMenu">
           <a href="academie.html">Programme</a>
+          <a href="infos-tarifs.html">Infos & Tarifs</a>
           <a href="faq.html">FAQ</a>
         </div>
       </div>
