--- a/components/header.html
+++ b/components/header.html
@@ -7,6 +7,10 @@
            class="site-logo" />
     </a>
 
+    <button id="menuToggle" class="menu-toggle" aria-label="Menu" aria-controls="mainNav" aria-expanded="false">
+      ☰
+    </button>
+
     <nav class="main-nav" id="mainNav">
       <a href="index.html">Accueil</a>
 
