--- a/components/header.html
+++ b/components/header.html
@@ -21,7 +21,7 @@
           <a href="concept.html">Concept</a>
           <a href="methodologie.html">Méthodologie</a>
           <a href="enjeux.html">Enjeux</a>
-           <a href="educateurs.html">Espace éducateurs</a> </div>
+           <a href="educateurs.html">Espace éducateurs</a>
         </div>
       </div>
 
